refactor : fix authority manangement