@@ -10,6 +10,7 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Data
@@ -24,6 +25,7 @@ public class User implements  UserDetails {
     private Long id;
     private  String firstname;
     private String lastname;
+    @Column(name = "email", unique = true, nullable = false)
     private  String email;
     private String password;
 
@@ -32,10 +34,10 @@ public class User implements  UserDetails {
     @Enumerated(EnumType.STRING)
     private Role role;
 
-    @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        return Collections.singletonList(new SimpleGrantedAuthority(role.name()));
     }
+
 
     @Override
     public String getPassword() {
